[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/Art Pack/Enemy_1_Neon.png" type="Texture" id=1]
[ext_resource path="res://scripts/Ennemi1.gd" type="Script" id=2]
[ext_resource path="res://assets/Sons/shoot.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24, 24 )

[sub_resource type="CircleShape2D" id=2]
radius = 388.0

[sub_resource type="Animation" id=3]
resource_name = "default"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -100, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "defaut"

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 31.8754, 24 )

[node name="Ennemi1" type="KinematicBody2D"]
position = Vector2( -95.8754, 0 )
script = ExtResource( 2 )

[node name="Enemy_1_Neon" type="Sprite" parent="."]
rotation = -1.5708
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/default = SubResource( 3 )
anims/defaut = SubResource( 4 )

[node name="Area2D2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2( -0.124588, 0 )
shape = SubResource( 5 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_Area2D2_body_entered"]
